--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -8,7 +8,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run a one-line script
         run: echo Hello, world!
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: run script
+        run: bash createfile.sh
