--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: run script
-        run: bash ${PWD}/.gtihub/worksflows/createfile.sh
+        run: bash .gtihub/worksflows/createfile.sh
