--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Run a one-line script
         run: ls -a
       - name: Run a one-line script
-        run: tree
+        run: tree -a
       - name: run script
         run: bash .github/workflows/createfile.sh
