Update create a file.yml

--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           message: 'Add the very useful text file'
           add: '*.txt --force'
-          cwd: './pathToRepo/'
+          cwd: './'
