--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -9,9 +9,10 @@ jobs:
 
     steps:
       # You can make whatever type of change to the repo...
-      - run: cd ../
+      - run: cd ../../
       - run: echo "123" > ./file.txt
       - run: ls -a
+      - run: tree -a
 
       # ...and then use the action as you would normally do, but providing the path to the repo
       - uses: EndBug/add-and-commit@v9
