--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
       - run: ls -a
+      - run: |
+        echo ${PWD}
 
       # ...and then use the action as you would normally do, but providing the path to the repo
       #- uses: EndBug/add-and-commit@v9
