--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -11,14 +11,14 @@ jobs:
       # If you need to, you can check out your repo to a different location
       - uses: actions/checkout@v3
         with:
-          path: './pathToRepo/'
+          path: './content/'
 
       # You can make whatever type of change to the repo...
-      - run: echo "123" > ./pathToRepo/file.txt
+      - run: echo "123" > ./content/file.txt
 
       # ...and then use the action as you would normally do, but providing the path to the repo
       - uses: EndBug/add-and-commit@v9
         with:
           message: 'Add the very useful text file'
           add: '*.txt --force'
-          cwd: './pathToRepo/'
+          cwd: './content/'
