--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -14,7 +14,9 @@ jobs:
           path: './'
 
       # You can make whatever type of change to the repo...
-      - run: echo "123 $(date +'%Y')" > ./content/$(date +'%Y')/file3.txt
+      - run: |
+        mkdir -p ./content/$(date +'%Y')/
+        echo "123 $(date +'%Y')" > ./content/$(date +'%Y')/file3.txt
 
       # ...and then use the action as you would normally do, but providing the path to the repo
       - uses: EndBug/add-and-commit@v9
