--- a/.github/workflows/create a file.yml
+++ b/.github/workflows/create a file.yml
@@ -16,7 +16,7 @@ jobs:
           Dir_N_File: ./content/$(date +'%Y')
       # You can make whatever type of change to the repo...
       - run: |
-          mkdir -p $Dir_N_File
+          mkdir -P $Dir_N_File
           echo "123 $(date +'%Y')" > $Dir_N_File/file2.txt
           bash ./run.sh
 
